deployment/udagram-feeds-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-feeds-api
  labels:
    app: udagram-feeds-api
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: udagram-feeds-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-feeds-api
  labels:
    app: udagram-feeds-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: udagram-feeds-api
  template:
    metadata:
      labels:
        app: udagram-feeds-api
    spec:
      containers:
      - name: udagram-feeds-api
        image: chomnoue/udagram-feeds-api:IMAGEVERSION
        ports:
        - containerPort: 80
