deployment/udagram-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-frontend
  labels:
    app: udagram-frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: udagram-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-frontend
  labels:
    app: udagram-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: udagram-frontend
  template:
    metadata:
      labels:
        app: udagram-frontend
    spec:
      containers:
      - name: udagram-frontend
        image: chomnoue/udagram-frontend:IMAGEVERSION
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
