deployment/udagram-reverseproxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-reverseproxy
  labels:
    app: udagram-reverseproxy
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: udagram-reverseproxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-reverseproxy
  labels:
    app: udagram-reverseproxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: udagram-reverseproxy
  template:
    metadata:
      labels:
        app: udagram-reverseproxy
    spec:
      containers:
      - name: udagram-reverseproxy
        image: chomnoue/udagram-reverseproxy:IMAGEVERSION
        ports:
        - containerPort: 80
