deployment/udagram-users-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-users-api
  labels:
    app: udagram-users-api
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: udagram-users-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-users-api
  labels:
    app: udagram-users-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: udagram-users-api
  template:
    metadata:
      labels:
        app: udagram-users-api
    spec:
      containers:
      - name: udagram-users-api
        image: chomnoue/udagram-users-api:IMAGEVERSION
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
